se agregan imagenes de programas utilizados, cambio de cv

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
                             <p class="lead">Full-stack Developer | Freelancer</p>
                             <p class="desc">Hola! Soy Melissa Barrios, soy <span class="text-main">Full Stack Developer</span>. Me gusta trabajar de manera remota y cuento con experiencia creando landings pages, paginas web y contenido con inteligencia artificial.</p>
                             <div class="btn-bar">
-                                <a class="font-alt" href="https://drive.google.com/file/d/1m0Pz8WDpPLeB61GLbqTJRGNozh1_HtDH/view?usp=drive_link">Descargar CV</a>
+                                <a class="font-alt" href="https://drive.google.com/file/d/17kkjBnTT_574RRk6ea_X0i-Z3p9w3poR/view?usp=sharing">Descargar CV</a>
                             </div>
                         </div>
                     </div>
@@ -168,10 +168,10 @@
                                                 <label>Nombre: </label>
                                                 <span>Meli Barrios</span>
                                             </li>
-                                            <li>
+                                      <!--       <li>
                                                 <label>Fecha de nacimiento: </label>
                                                 <span>11 de diciembre de 1990</span>
-                                            </li>
+                                            </li> -->
                                             <li>
                                                 <label>Edad: </label>
                                                 <span>32 años</span>
@@ -198,7 +198,7 @@
                                             </li> -->
                                             <li>
                                                 <label>Freelance: </label>
-                                                <span>Dispinible</span>
+                                                <span>Disponible</span>
                                             </li>
                                         </ul>
                                     </div>
@@ -292,7 +292,7 @@
                 <div class="owl-carousel" data-items="2" data-nav-dots="true" data-md-items="2" data-sm-items="1" data-xs-items="1" data-xx-items="1" data-space="30" data-autoplay="true">
                     <div class="testimonial-01 media">
                         <div class="avatar">
-                            <img src="./assets/logos/mongodb.jpg" title="" alt="">
+                            <img src="./assets/logos/html.jpg" title="" alt="">
                         </div>
                       <!--   <div class="media-body">
                             <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</p>
@@ -300,6 +300,17 @@
                             <span>CEO at pxdraft</span>
                         </div> -->
                     </div>
+                    <div class="testimonial-01 media">
+                        <div class="avatar">
+                            <img src="./assets/logos/css.jpg" title="" alt="">
+                        </div>
+                      <!--   <div class="media-body">
+                            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</p>
+                            <h6>Jennifer Lutheran</h6>
+                            <span>CEO at pxdraft</span>
+                        </div> -->
+                    </div>
+
                     <div class="testimonial-01 media">
                         <div class="avatar">
                             <img src="./assets/logos/javascript.jpg" title="" alt="">
@@ -345,6 +356,16 @@
                             <img src="./assets/logos/vite.jpg" title="" alt="">
                         </div>
 <!--                         <div class="media-body">
+                            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</p>
+                            <h6>Jennifer Lutheran</h6>
+                            <span>CEO at pxdraft</span>
+                        </div> -->
+                    </div>
+                    <div class="testimonial-01 media">
+                        <div class="avatar">
+                            <img src="./assets/logos/mongodb.jpg" title="" alt="">
+                        </div>
+                      <!--   <div class="media-body">
                             <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</p>
                             <h6>Jennifer Lutheran</h6>
                             <span>CEO at pxdraft</span>
@@ -445,7 +466,7 @@
                             </li>
                             <li>
                                 <span>2022-2023</span>
-                                <h6>Programadora Full Stack</h6>
+                                <h6>Full Stack Developer</h6>
                                 <p>Ucamp</p>
                             </li>
                             <li>
@@ -468,32 +489,40 @@
                         </ul>
                     </div>
                     <div class="col-lg-7 ml-auto m-15px-tb">
-                        <div class="skill-lt">
+                     <!--    <div class="skill-lt">
                             <h6>HTML5</h6>
                             <span>92%</span>
                             <div class="skill-bar">
                                 <div class="skill-bar-in" role="progressbar" aria-valuenow="92" aria-valuemin="0" aria-valuemax="100"></div>
                             </div>
-                        </div><!-- /skill -->
+                        </div> --><!-- /skill -->
 
-                        <div class="skill-lt">
+                 <!--        <div class="skill-lt">
                             <h6>JavaScript</h6>
                             <span>75%</span>
                             <div class="skill-bar">
                                 <div class="skill-bar-in" role="progressbar" aria-valuenow="72" aria-valuemin="0" aria-valuemax="100">
                                 </div>
                             </div>
-                        </div><!-- /skill -->
-                        <div class="skill-lt">
+                        </div> --><!-- /skill -->
+                     <!--    <div class="skill-lt">
                             <h6>React</h6>
                             <span>80%</span>
                             <div class="skill-bar">
                                 <div class="skill-bar-in" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100">
                                 </div>
                             </div>
-                        </div><!-- /skill -->
-                        <div class="skill-lt">
+                        </div> --><!-- /skill -->
+                  <!--       <div class="skill-lt">
                             <h6>Mongo Db</h6>
+                            <span>70%</span>
+                            <div class="skill-bar">
+                                <div class="skill-bar-in" role="progressbar" aria-valuenow="88" aria-valuemin="0" aria-valuemax="100">
+                                </div>
+                            </div>
+                        </div> --><!-- /skill -->
+                        <div class="skill-lt">
+                            <h6>Bootstrap</h6>
                             <span>70%</span>
                             <div class="skill-bar">
                                 <div class="skill-bar-in" role="progressbar" aria-valuenow="88" aria-valuemin="0" aria-valuemax="100">
