actualizacion en nombre

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                             <h6>Hola, mi nombre es</h6>
                             <h1 class="font-alt">Meli Barrios</h1>
                             <p class="lead">Full-stack Developer | Freelancer</p>
-                            <p class="desc">Hola! Soy Melissa Barrios, soy <span class="text-main">Full Stack Developer</span>. Me gusta trabajar de manera remota y cuento con experiencia creando landings pages, paginas web y contenido con inteligencia artificial.</p>
+                            <p class="desc">Hola! Soy Meli Barrios, soy <span class="text-main">Full Stack Developer</span>. Me gusta trabajar de manera remota y cuento con experiencia creando landings pages, paginas web y contenido con inteligencia artificial.</p>
                             <div class="btn-bar">
                                 <a class="font-alt" href="https://drive.google.com/file/d/1VQF8cqel6l_w0s260mT6f9hZj_8jXbzI/view?usp=sharing">Descargar CV</a>
                             </div>
